--- a/index.html
+++ b/index.html
@@ -35,19 +35,18 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-header">
               &#9776;
             </button>
-            <a href="#" class="navbar-brand">Album</a>
+              <a href="#" class="navbar-brand"> Igal &amp; Sons</a>
           </div>
         </div>
 
         <section class="jumbotron text-xs-center">
           <div class="container">
-            <h1 class="jumbotron-heading">Album example</h1>
+            <h1 class="jumbotron-heading">Igal &amp; Sons</h1>
             <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-            <p>
-              <a href="#" class="btn btn-primary">Main call to action</a>
+            <div>
+              <a href="#" class="btn btn-info">Main call to action</a>
               <a href="#" class="btn btn-secondary">Secondary action</a>
-            </p>
-          </div>
+            </div>
         </section>
 
         <div class="album text-muted">
@@ -55,43 +54,18 @@
 
             <div class="row">
               <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                <img src="img/mic.jpg" alt="microphone">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                <img src="img/guitar.jpg" alt="Guitar image">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                <img src="img/lady-guitar.jpg" alt="a woman playing guitar">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
 
-              <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-
-              <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
             </div>
 
           </div>
